--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.0.0.RELEASE</version>
+    </parent>
+
     <groupId>com.course.code</groupId>
     <artifactId>Chapter</artifactId>
     <packaging>pom</packaging>
@@ -13,6 +19,7 @@
         <module>Chapter5</module>
         <module>Chapter6</module>
         <module>Chapter9</module>
+        <module>Chapter10</module>
     </modules>
 
 
