--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>Chapter6</module>
         <module>Chapter9</module>
         <module>Chapter10</module>
+        <module>Chapter11</module>
+        <module>Chapter12</module>
     </modules>
 
 
