--- a/pom.xml
+++ b/pom.xml
@@ -25,5 +25,13 @@
         <module>test</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+    </dependencies>
+
 
 </project>
