--- a/auto_python/.vscode/launch.json
+++ b/auto_python/.vscode/launch.json
@@ -4,12 +4,24 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        // {
+        //     "name": "Python: 当前文件",
+        //     "type": "python",
+        //     "request": "launch",
+        //     "program": "${file}",
+        //     "console": "integratedTerminal"
+        // }
         {
-            "name": "Python: 当前文件",
+            "name": "Python",
             "type": "python",
             "request": "launch",
+            "stopOnEntry": false,
+            "pythonPath": "${config:python.pythonPath}",
             "program": "${file}",
-            "console": "integratedTerminal"
+            "cwd": "${workspaceRoot}",
+            "env": {"PYTHONPATH":"${workspaceRoot}"},
+            "envFile": "${workspaceRoot}/.env",
         }
     ]
+    
 }
