--- a/auto_python5_V3/conf/config.ini
+++ b/auto_python5_V3/conf/config.ini
@@ -14,7 +14,7 @@ headers = {
 phone = 15099999999
 pwd = 12345678
 admin_phone = 13178900987
-admin_phone = lemonban
+admin_pwd = lemonban
 
 [mysql]
 host = 120.78.128.25
